Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67248

QPainter::fillRect with brush texture and QPainter::drawTiledPixmap don't work properly with HighDPI scaling

    XMLWordPrintable

Details

    Description

      Running attached example with 200% scaling shows that the image is rendered at double size in those cases, even though the pixmap has devicePixelRatio set to the same.

      Attachments

        1. highdpi.png
          highdpi.png
          11 kB
        2. qtbug67248_brush.diff
          2 kB
        3. qtbug67248_diag.diff
          12 kB
        4. qtbug67248_log.txt
          3 kB
        5. qtbug67248.tar.gz
          0.7 kB
        6. qtbug67248.zip
          1 kB

        Issue Links

          For Gerrit Dashboard: QTBUG-67248
          # Subject Branch Project Status CR V

          Activity

            People

              vgt Eirik Aavitsland
              poikelin Joni Poikelin
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes