tests/auto/other/lancelot/paintcommands.h
@@ -229,10 +229,12 @@ private:
     void command_pixmap_load(QRegularExpressionMatch re);
     void command_pixmap_setMask(QRegularExpressionMatch re);
     void command_bitmap_load(QRegularExpressionMatch re);
+    void command_pixmap_setDevicePixelRatio(QRegularExpressionMatch re);
     void command_image_convertToFormat(QRegularExpressionMatch re);
     void command_image_load(QRegularExpressionMatch re);
     void command_image_setColor(QRegularExpressionMatch re);
     void command_image_setColorCount(QRegularExpressionMatch re);
+    void command_image_setDevicePixelRatio(QRegularExpressionMatch re);
 
     // commands: transformation
     void command_resetMatrix(QRegularExpressionMatch re);
